Setup package and update eda

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -312,6 +312,38 @@
     "## Exploring each Column\n",
     "\n",
     "We can look at the unique number of values to determine whether our data is categorical or not. We can also be more specific and choose between ordinal and nominal data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PassengerID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0001_01\n",
+       "1    0002_01\n",
+       "2    0003_01\n",
+       "3    0003_02\n",
+       "4    0004_01\n",
+       "Name: PassengerId, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df['PassengerId'].head()"
    ]
   },
   {
